--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "type": "module",
 
 "engines": {
-  "node": "18.x"
+  "node": "24.x"
 },
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
+"scripts": {
+  "dev": "vite",
+  "build": "chmod +x node_modules/.bin/vite && vite build",
+  "preview": "vite preview"
+},
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
